js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.3.kt
fun getString(): String {
    konst s: (Any, Any, Any) -> Unit = { _, _, _ -> }
    return getTypeName(s)
}
